--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "react-use-measure": "^2.1.1"
+    "react-use-measure": "^2.1.1",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
