--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@vercel/analytics": "^1.2.2",
     "framer-motion": "^11.2.4",
     "gsap": "^3.12.5",
     "lucide-react": "^0.378.0",
